2eme modif dans feature brnch

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>BookTracker</title>
 </head>
 <body>
-    <h1>Welcome to BookTracker 222</h1>
+    <h1>Welcome to BookTracker 222</h1><hr>
+    <p>Track all your books easily.</p>
+
 </body>
 </html>
